--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Benvenuto nel mio sito!</h1>
+        <h1>FRANESCO ED AMBRA</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
