--- a/backInTime.html
+++ b/backInTime.html
@@ -32,29 +32,18 @@
     <section class="home">
         <div class="container">
             <!-- Riquadro SPOSO -->
-            <a href="javascript:void(0);" class="box box-blue" id="show-images-sposo">
+            <a href="https://drive.google.com/drive/folders/1p_VXdUzGkyw5n9jgbBC771xJYFA5WcM1" class="box box-blue" id="show-images-sposo">
                 <img src="icona_sposo.png" alt="Icona 1" class="box-img">
                 <p class="box-text">SPOSO</p>
             </a>
             <!-- Riquadro SPOSA -->
-            <a href="javascript:void(0);" class="box box-white" id="show-images-sposa">
+            <a href="https://drive.google.com/drive/folders/1p_VXdUzGkyw5n9jgbBC771xJYFA5WcM1" class="box box-white" id="show-images-sposa">
                 <img src="icona_sposa.png" alt="Icona 2" class="box-img">
                 <p class="box-text">SPOSA</p>
             </a>
         </div>
 
-        <!-- Galleria di immagini nascosta -->
-        <div id="image-gallery" class="image-gallery" style="display:none;">
-            <div class="image-container">
-                <img src="https://drive.google.com/uc?id=1wOvJgi3tVy2WARDLuxrnP7He5zSQgiYx" alt="Immagine 1" class="gallery-image" id="image-display">
-            </div>
-            <button id="prev-button">Indietro</button>
-            <button id="next-button">Avanti</button>
-        </div>
-    </section>
-
     <script src="script.js"></script> <!-- Collegamento al file script -->
-    <script src="get_immagini.js"></script>
 
 </body>
 </html>
