--- a/backInTime.html
+++ b/backInTime.html
@@ -20,11 +20,12 @@
     <!-- Menu nascosto che si aprirà al click -->
     <nav class="dropdown-menu" id="dropdown-menu">
         <ul>
+            <li><a href="index.html">Homepage</a></li>
             <li><a href="informazioni.html">Informazioni</a></li>
             <li><a href="backInTime.html">Back in Time</a></li>
-            <li><a href="#conosci-gli-sposi">Conosci gli sposi</a></li>
-            <li><a href="#invitati">Invitati</a></li>
-            <li><a href="index.html">Homepage</a></li>
+            <li><a href="conosci_gli_sposi.html">Conosci gli sposi</a></li>
+             <li><a href="amici_sposi.html">Amici degli sposi</a></li>
+            
         </ul>
     </nav>
 
