--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina con Sfondo</title>
+    <title>Francesc&Ambra</title>
     <link rel="stylesheet" href="stylesHome.css">
 </head>
 <body>
@@ -19,11 +19,12 @@
 
     <nav class="dropdown-menu" id="dropdown-menu">
         <ul>
+            <li><a href="index.html">Homepage</a></li>
             <li><a href="informazioni.html">Informazioni</a></li> <!-- Link a informazioni.html -->
             <li><a href="backInTime.html">Back in Time</a></li>
-            <li><a href="#conosci-gli-sposi">Conosci gli sposi</a></li>
-            <li><a href="#invitati">Invitati</a></li>
-            <li><a href="index.html">Homepage</a></li>
+            <li><a href="conosci_gli_sposi.html">Conosci gli sposi</a></li>
+            <li><a href="amici_sposi.html">Amici degli sposi</a></li>
+            
         </ul>
     </nav>
     
