--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
     <!-- La pagina sarà solo lo sfondo, senza contenuti -->
     <section class="home">
+        <!-- Testo sopra l'immagine -->
       
     </section>
 
     <script src="script.js"></script>
 </body>
 </html>
-
