--- a/conosci_gli_sposi.html
+++ b/conosci_gli_sposi.html
@@ -62,6 +62,7 @@
       <li><a href="backInTime.html">Back in Time</a></li>
       <li><a href="conosci_gli_sposi.html">Conosci gli sposi</a></li>
        <li><a href="amici_sposi.html">Amici degli sposi</a></li>
+        <li><a href="carica_foto.html">Carica qui le tue foto</a></li>
     </ul>
   </nav>
 
