--- a/san_saba.html
+++ b/san_saba.html
@@ -25,6 +25,7 @@
             <li><a href="backInTime.html">Back in Time</a></li>
             <li><a href="#conosci-gli-sposi">Conosci gli sposi</a></li>
              <li><a href="amici_sposi.html">Amici degli sposi</a></li>
+              <li><a href="carica_foto.html">Carica qui le tue foto</a></li>
         </ul>
     </nav>
 
