--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
     <!-- Barra in alto con l'icona del burger menu -->
     <div class="navbar">
-        <div class="burger-menu" id="burger-menu">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-        </div>
+    <div class="burger-menu" id="burger-menu">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
     </div>
+    <span class="menu-label">MENU</span>
+</div>
+
 
     <nav class="dropdown-menu" id="dropdown-menu">
         <ul>
@@ -29,11 +31,13 @@
     </nav>
     
 
-    <!-- La pagina sarà solo lo sfondo, senza contenuti -->
-    <section class="home">
+
         <!-- Testo sopra l'immagine -->
-      
-    </section>
+      <section class="home">
+    <button id="open-menu-btn" class="btn-open-menu">Apri Menu</button>
+</section>
+
+
 
     <script src="script.js"></script>
 </body>
