--- a/villa_fontenuova.html
+++ b/villa_fontenuova.html
@@ -15,6 +15,7 @@
             <div class="line"></div>
             <div class="line"></div>
         </div>
+         <span class="menu-label">MENU</span>
     </div>
 
     <!-- Menu a tendina -->
