--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
 
 
         <!-- Testo sopra l'immagine -->
-      <section class="home">
-    <button id="open-menu-btn" class="btn-open-menu">Apri Menu</button>
+     
+   <section class="home">
+    <div class="menu-instruction">
+        Clicca sul menu in alto a sinistra per iniziare 🌸
+    </div>
 </section>
+
+
 
 
 
