--- a/amici_sposi.html
+++ b/amici_sposi.html
@@ -6,7 +6,7 @@
   <title>Addio al Nubilato e Celibato</title>
   <link rel="stylesheet" href="stylesInfo.css" />
 </head>
-<body style="background-color: #ffffff;">
+<body style="background-color: #d07b7b;">
 
   <!-- Navbar con burger menu -->
   <div class="navbar">
