--- a/backInTime.html
+++ b/backInTime.html
@@ -6,7 +6,7 @@
     <title>Back in Time</title>
     <link rel="stylesheet" href="stylesBackInTime.css"> <!-- Colleghiamo il CSS -->
 </head>
-<body style="background-color: #D3F9D8;"> <!-- Sfondo verde chiaro -->
+<body style="background-color: #bfbfbf;"> <!-- Sfondo verde chiaro -->
     
     <!-- Barra in alto con l'icona del burger menu -->
     <div class="navbar">
@@ -36,12 +36,12 @@
     <section class="home">
         <div class="container">
             <!-- Riquadro SPOSO -->
-            <a href="https://drive.google.com/drive/folders/1QnHPZ4HJKjmJBsyDUvRB-HxvsHGxTUhp" class="box box-blue" id="show-images-sposo">
+            <a href="sposo.html" class="box box-blue" id="show-images-sposo">
                 <img src="icona_sposo.png" alt="Icona 1" class="box-img">
                 <p class="box-text">SPOSO</p>
             </a>
             <!-- Riquadro SPOSA -->
-            <a href="https://drive.google.com/drive/folders/1p_VXdUzGkyw5n9jgbBC771xJYFA5WcM1" class="box box-white" id="show-images-sposa">
+            <a href="sposa.html" class="box box-white" id="show-images-sposa">
                 <img src="icona_sposa.png" alt="Icona 2" class="box-img">
                 <p class="box-text">SPOSA</p>
             </a>
